--- a/src/App.css
+++ b/src/App.css
@@ -34,3 +34,9 @@ body {
 .thumbsdown {
   background-color: red;
 }
+
+.comment {
+  text-align: center;
+  border-style: solid;
+  border-color: black;
+}
