--- a/src/App.css
+++ b/src/App.css
@@ -52,12 +52,12 @@ body {
 .topic {
   border-style: solid;
   border-color: black;
+  background-color: white;
   padding-left: 20px;
   padding-right: 20px;
 }
 
 .article {
-  text-align: center;
   border-style: solid;
   border-color: black;
   background-color: white;
