--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,9 @@ body {
 }
 
 .home-box {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
   border-style: solid;
   border-color: black;
