--- a/src/App.css
+++ b/src/App.css
@@ -78,3 +78,10 @@ body {
   padding-top: 20px;
   padding-bottom: 20px;
 }
+
+.newspaper {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
