--- a/src/App.css
+++ b/src/App.css
@@ -81,6 +81,8 @@ body {
 
 .newspaper {
   display: block;
+  margin-top: 20px;
+  margin-bottom: 20px;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
